<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/action_rescan"
        android:icon="@drawable/rescan"
        android:title="@string/action_rescan"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_sort"
        android:icon="@drawable/sort"
        android:title="@string/action_sort"
        app:showAsAction="always">

        <menu>

            <group android:checkableBehavior="single">

                <item
                    android:id="@+id/action_sort_by_ssid"
                    android:title="@string/action_sort_by_ssid" />

                <item
                    android:id="@+id/action_sort_by_bssid"
                    android:title="@string/action_sort_by_bssid" />

                <item
                    android:id="@+id/action_sort_by_rssi"
                    android:title="@string/action_sort_by_rssi" />

                <item
                    android:id="@+id/action_sort_by_frequency"
                    android:title="@string/action_sort_by_frequency" />

                <item
                    android:id="@+id/action_sort_by_capabilities"
                    android:title="@string/action_sort_by_capabilities" />

            </group>

        </menu>

    </item>
</menu>
